# lucidshed

./: 404.html  CNAME  index.html
backend/data-api/: .env  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  entrypoint.sh  pyproject.toml  setup.cfg
backend/data-api/app/: decorators.py  entrypoints.py  settings.py
backend/data-api/app/api/: application.py  settings.py  utils.py
backend/data-api/app/api/dependencies/: authorization.py  database.py  rate_limit.py
backend/data-api/app/api/models/: users.py
backend/data-api/app/api/routers/: auth.py  company.py  engineering_item.py  feature.py  feature_list.py  feature_request.py  files.py  iteration.py  organization.py  search.py  support_item.py  team.py  user.py
backend/data-api/app/api/tools/: ask_lucid.py  opensearch.py
backend/data-api/app/commands/organizations/: base.py  cleanup_test_data.py  reindex.py  test_cleanup.py  vacuum.py
backend/data-api/app/database/: database.py  utils.py
backend/data-api/app/database/common/: controllers.py  models.py  queries.py  shared_queries.py
backend/data-api/app/database/companies/: queries.py
backend/data-api/app/database/companies/controllers/: companies.py  company.py
backend/data-api/app/database/companies/models/: company.py
backend/data-api/app/database/features/: queries.py
backend/data-api/app/database/features/controllers/: feature.py  feature_list.py  feature_request.py
backend/data-api/app/database/features/models/: feature.py  feature_list.py  feature_request.py
backend/data-api/app/database/files/: queries.py
backend/data-api/app/database/files/controllers/: file.py
backend/data-api/app/database/files/models/: file.py
backend/data-api/app/database/history/: queries.py
backend/data-api/app/database/history/controllers/: history.py
backend/data-api/app/database/history/models/: history.py
backend/data-api/app/database/iterations/: queries.py
backend/data-api/app/database/iterations/controllers/: iteration.py
backend/data-api/app/database/iterations/models/: iteration.py
backend/data-api/app/database/organizations/: queries.py
backend/data-api/app/database/organizations/controllers/: organization.py
backend/data-api/app/database/organizations/models/: organization.py
backend/data-api/app/database/teams/: queries.py
backend/data-api/app/database/teams/controllers/: team.py
backend/data-api/app/database/teams/models/: team.py
backend/data-api/app/database/users/: queries.py  utils.py
backend/data-api/app/database/users/controllers/: user.py  user_permission.py  user_session.py
backend/data-api/app/database/users/models/: user.py  user_permission.py  user_session.py
backend/data-api/app/database/work_items/: queries.py
backend/data-api/app/database/work_items/controllers/: engineering_item.py  feature_list.py  feature_request.py  support_item.py  work_item.py
backend/data-api/app/database/work_items/models/: comment.py  engineering_item.py  feature_list.py  feature_request.py  support_item.py  work_item.py  work_item_assignment.py
backend/data-api/app/exceptions/: common.py
backend/data-api/data_api/api/: application.py  settings.py
backend/data-api/data_api/api/routers/: engineering_item.py
backend/data-api/data_api/database/: database.py
backend/data-api/data_api/exceptions/: common.py
backend/data-api/data_api/orm/: common.py
backend/data-api/data_api/orm/common/: models.py  queries.py
backend/data-api/data_api/orm/history/models/: history.py
backend/data-api/data_api/orm/work_items/: queries.py
backend/data-api/data_api/orm/work_items/controllers/: engineering_item.py  work_item.py
backend/data-api/data_api/orm/work_items/models/: engineering_item.py  work_item.py  work_item_assignment.py
backend/data-api/docs/: deployment.md  signup.md
backend/data-api/tests/: fixtures.py
backend/data-api/tests/acceptance/api/: utils.py
backend/data-api/tests/acceptance/api/routers/: test_auth.py  test_companies.py  test_engineering_item.py  test_feature_list.py  test_feature_request.py  test_features.py  test_files.py  test_iterations.py  test_organization.py  test_search.py  test_support_item.py  test_teams.py  test_user.py  (+1 more)
backend/data-api/tests/acceptance/database/: utils.py
backend/data-api/tests/unit/commands/: test_organization_commands.py
backend/user-api/: Dockerfile  Makefile  pyproject.toml
(+355 files in other folders)
