[project]
name = "app"
version = "0.1.0"
description = ""

authors = [
    {name = "Marcus Scaffidi"},
    {name = "Zach Durham"},
    {name = "Ricardo Jimenez"},
    {name = "Andy Leeb"},
]

requires-python = "<4.0,>=3.13"
dependencies = [
    "aiohttp<4.0.0,>=3.11.18",
    "asyncpg<1.0.0,>=0.30.0",
    "backoff<3.0.0,>=2.2.1",
    "bcrypt<5.0.0,>=4.3.0",
    "fastapi[standard]>=0.115.12,<1.0.0",
    "passlib<2.0.0,>=1.7.4",
    "pyjwt<3.0.0,>=2.10.1",
    "pydantic[email]<3.0.0,>=2.11.3",
    "sendgrid<7.0.0,>=6.11.0",
    "uvicorn<1.0.0,>=0.30.6",
    "google-cloud-storage<3.0.0,>=2.18.2",
    "openai<2.0.0,>=1.75.0",
    "opensearch-py<3.0.0,>=2.7.1",
    "google-auth==2.35.0",
    "pydantic-settings<3.0.0,>=2.9.1",
]

[dependency-groups]
dev = [
    "black<25.0.0,>=24.8.0",
    "flake8<8.0.0,>=7.1.2",
    "isort<6.0.0,>=5.13.2",
    "mypy<2.0.0,>=1.15.0",
    "pytest<9.0.0,>=8.3.5",
    "pytest-asyncio<1.0.0,>=0.23.8",
    "pytest-xdist<4.0.0,>=3.6.1",
]

[project.scripts]
api = "app.entrypoints:run_api"
vacuum = "app.commands.organizations.vacuum:run_command"
test_cleanup = "app.commands.organizations.cleanup_test_data:run_command"
reindex = "app.commands.organizations.reindex:run_command"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 120
