[project]
name = "app"
version = "0.1.0"
description = ""

authors = [
    {name = "Marcus Scaffidi"},
    {name = "Zach Durham"},
    {name = "Ricardo Jimenez"},
    {name = "Andy Leeb"},
]

requires-python = "<4.0,>=3.13"
dependencies = [
    "aiohttp<4.0.0,>=3.13.3",
    "asyncpg<1.0.0,>=0.31.0",
    "backoff<3.0.0,>=2.2.1",
    "bcrypt<5.0.0,>=4.3.0",
    "fastapi[standard]>=0.130.0,<1.0.0",
    "passlib<2.0.0,>=1.7.4",
    "pyjwt<3.0.0,>=2.11.0",
    "pydantic[email]<3.0.0,>=2.12.5",
    "sendgrid<7.0.0,>=6.12.5",
    "uvicorn<1.0.0,>=0.41.0",
    "google-cloud-storage<4.0.0,>=3.9.0",
    "openai<3.0.0,>=2.21.0",
    "opensearch-py<4.0.0,>=3.1.0",
    "google-auth==2.35.0",
    "pydantic-settings<3.0.0,>=2.13.1",
]

[dependency-groups]
dev = [
    "black<27.0.0,>=26.1.0",
    "flake8<8.0.0,>=7.3.0",
    "isort<9.0.0,>=8.0.0",
    "mypy<2.0.0,>=1.19.1",
    "pytest<10.0.0,>=9.0.2",
    "pytest-asyncio<2.0.0,>=1.3.0",
    "pytest-xdist<4.0.0,>=3.8.0",
]

[project.scripts]
api = "app.entrypoints:run_api"
vacuum = "app.commands.organizations.vacuum:run_command"
test_cleanup = "app.commands.organizations.cleanup_test_data:run_command"
reindex = "app.commands.organizations.reindex:run_command"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 120
