[tool.poetry]
name = "user_api"
version = "0.1.0"
description = ""
authors = ["Marcus Scaffidi", "Zach Durham"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.3"
aiohttp = "^3.9.5"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"
mypy = "^1.10.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
